Sa agregaron RFC, CURP y la opcion para colocar el numero de Tel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
     <h1 id="encabezado1">DOM Ejercicio</h1>
     <h2 id="encabezado2">DOM Ejercicio</h2>
     <em onclick="modifica();">cursiva</em>
+<form>
+<div class="mb-3">
+<label for="textRFC" class="form-label">RFC: </label>
+<input type="text" class="form-control" id="txtRFC" placeholder="Escribe tu RFC">
+</div>
+
+<div>
+<label for="txtTelefono" class="form-label">txtTelefono: </label>
+<input type="text" class="form-control" id="txtTelefono" placeholder="553338168649">
+</div>
+
+<div class="mb-3">
+    <label for="txtCURP" class="form-label">CURP: </label>
+    <input type="text" class="form-control" id="txtCURP" placeholder="Escribe tu CURP">
+    </div>
     <button type="button" id="btnMostrar" class="btn btn-primary">Primary</button>
+</form>
 
     <main>
         <ul>
